# game-of-life

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  colors.h  main.cpp
app/include/: seeds.h
lib/: CMakeLists.txt  GameOfLife_T.cpp  GameOfLife_T.h
src/: GameOfLife_T.h
src/test/: GameOfLifeTest.cpp
src/test/utils/: utils.h
test/: CMakeLists.txt  GameOfLifeTest.cpp
test/include/: utils.h
test/utils/: utils.h
